Initial Commit of CICD project

--- a/TestCases/packages.config
+++ b/TestCases/packages.config
@@ -1,7 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="BizUnit.Core" version="5.0.5" targetFramework="net452" />
-  <package id="BizUnit.TestSteps" version="5.0.5" targetFramework="net452" />
+  <package id="BizUnit.Core" version="5.0.5" targetFramework="net452" requireReinstallation="true" />
+  <package id="BizUnit.TestSteps" version="5.0.5" targetFramework="net452" requireReinstallation="true" />
   <package id="Microsoft.BizTalk.TestTools" version="1.0.0" targetFramework="net452" />
   <package id="Microsoft.VisualStudio.UnitTesting" version="11.0.50727.1" targetFramework="net452" />
+  <package id="NUnit" version="3.11.0" targetFramework="net452" />
 </packages>
